<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:background="@color/pure_white"
    android:elevation="8dp"
    android:gravity="center_vertical"
    android:weightSum="4">

    <Button
        android:id="@+id/navDashboard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nav_dashboard"
        android:textSize="11sp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/deep_canopy_green"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/navNodes"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nav_nodes"
        android:textSize="11sp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/deep_canopy_green"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/navCreate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nav_new_booking"
        android:textSize="11sp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/deep_canopy_green"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/navHistory"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nav_history"
        android:textSize="11sp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/deep_canopy_green"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>